# LampDetection

./: .env  .gitignore  App.cpp  LampDetectionBuffer.py  Readme.txt  app.py  appRas.py  lampLogger.py  mqttHandel.py  requirmentProj.txt
Esp32/: LDR.ino
InfluxDB/: smartlight_fault_detection_system.json
lampdetection-v5/: CMakeLists.txt  README.txt
lampdetection-v5/edge-impulse-sdk/classifier/: ei_classifier_types.h  ei_model_types.h
lampdetection-v5/model-parameters/: model_metadata.h  model_variables.h
lampdetection-v5/source/: main.cpp
lampdetection-v5/tflite-model/: tflite_learn_3_compiled.cpp  tflite_learn_3_compiled.h
projEnv/: pyvenv.cfg
switchingLamp/: switchingLamp.ino
